--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="estilo/imagens/icons8-bola-de-futebol-64.png" type="image/x-icon">
     <title>Sorteio de times</title>
     <link rel="stylesheet" href="estilo/style.css">
 </head>
@@ -14,14 +15,23 @@
         <section class="page" id="time1" name="time1">
         
             <img src="#" alt="imagem_time_1">
+                <p>  
+                    time 1
+                </p>
         </section>
         <section class="page" id="time2" name="time2">
-            <img src="#" alt="imagem_time_2">
+                <img src="#" alt="imagem_time_2">
+                <p>
+                    time 2
+                </p>
         </section>
         <section class="page">
             <input id="button" type="submit" value="sortear">
         </section>
     </div>
+    <footer>
+        <p>Site desenvolvido por <a href="https://github.com/biel-444">Gabriel de Vargas</a> e <a href="https://github.com/Gabriel-Davila-dc">Gabriel D'avila</a></p>
+    </footer>
     
 </body>
 </html>
