--- a/home.html
+++ b/home.html
@@ -15,18 +15,18 @@
         <section class="page" id="time1" name="time1">
         
             <img src="#" alt="imagem_time_1">
-                <p>  
+                <p id="vartime1">  
                     time 1
                 </p>
         </section>
         <section class="page" id="time2" name="time2">
                 <img src="#" alt="imagem_time_2">
-                <p>
+                <p id = "vartime2">
                     time 2
                 </p>
         </section>
         <section class="page">
-            <input id="button" type="submit" value="sortear">
+            <input id="button" type="submit" value="sortear" onclick="cliqueDeSorteio()">
         </section>
     </div>
     <footer>
@@ -34,4 +34,5 @@
     </footer>
     
 </body>
+<script src="sorteador.js"></script>
 </html>
