--- a/home.html
+++ b/home.html
@@ -13,14 +13,13 @@
             <h1>Sorteio de times</h1>
         </section>
         <section class="page" id="time1" name="time1">
-        
-            <img src="#" alt="imagem_time_1" id="img1">
+            <img src="estilo/imagens/icons8-bola-de-futebol-64.png" id="img1"  class="imagem_inicial">
                 <p id="vartime1">  
                     time 1
                 </p>
         </section>
         <section class="page" id="time2" name="time2">
-                <img src="#" alt="imagem_time_2" id="img2">
+                <img src="estilo/imagens/icons8-bola-de-futebol-64.png" id="img2" class="imagem_inicial">
                 <p id = "vartime2">
                     time 2
                 </p>
