--- a/home.html
+++ b/home.html
@@ -14,13 +14,13 @@
         </section>
         <section class="page" id="time1" name="time1">
         
-            <img src="#" alt="imagem_time_1" id="img1">
+            <img src="#" alt="time_1" id="img1">
                 <p id="vartime1">  
                     time 1
                 </p>
         </section>
         <section class="page" id="time2" name="time2">
-                <img src="#" alt="imagem_time_2" id="img2">
+                <img src="#" alt="time_2" id="img2">
                 <p id = "vartime2">
                     time 2
                 </p>
